--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
   <body>
     <div>
       <header class="">
-        <div class="shadow-lg py-6 border-b border-brand-xl-lightgray">
+        <div class="shadow-lg md:py-6 border-b border-brand-xl-lightgray">
           <div
-            class="flex justify-between items-center gap-8 max-w-[1536px] px-[2rem] mx-auto max-md:h-[72px]"
+            class="flex justify-between items-center gap-8 max-w-[1536px] px-[2rem] mx-auto max-md:min-h-[72px]"
           >
             <div class="mr-4 header-logo">
               <a href="/">
                 <img
                   src="./assets/img/logo/logo-text-black.svg"
                   alt="YAYImages Logo"
+                  class="max-w-[110px] md:max-w-none"
                 />
               </a>
             </div>
@@ -120,7 +121,7 @@
         </div>
       </main>
       <footer>
-        <div class="bg-black py-14 text-white">
+        <div class="bg-black py-8 md:py-14 text-white">
           <div class="container mx-auto">
             <div class="flex">
               <div class="flex flex-col flex-1 md:grid md:grid-cols-3">
@@ -152,7 +153,7 @@
                 </div>
                 <div class="order-2">
                   <h4
-                    class="py-8 border-white border-b md:py-0 md:border-0 w-full flex items-center gap-2 text-xl"
+                    class="py-6 border-white border-b md:py-0 md:border-0 w-full flex items-center gap-2 text-xl"
                     data-toggle="collapse"
                     data-target="#footer-partnership"
                   >
@@ -164,10 +165,13 @@
                     <img
                       src="assets/img/icons/arrow-down-white.svg"
                       alt="Icon Arrow"
-                      class="md:hidden"
+                      class="md:hidden [.open_&]:rotate-180"
                     />
                   </h4>
-                  <div class="hidden md:block" id="footer-partnership">
+                  <div
+                    class="hidden md:block transition duration-500"
+                    id="footer-partnership"
+                  >
                     <ul class="text-sm font-light [&>li]:py-2 mt-4">
                       <li>
                         <a href="#">Become a Contributor</a>
@@ -201,10 +205,13 @@
                     <img
                       src="assets/img/icons/arrow-down-white.svg"
                       alt="Icon Arrow"
-                      class="md:hidden"
+                      class="md:hidden [.open_&]:rotate-180"
                     />
                   </h4>
-                  <div class="hidden md:block" id="footer-information">
+                  <div
+                    class="hidden md:block transition duration-500"
+                    id="footer-information"
+                  >
                     <ul class="text-sm font-light [&>li]:py-2 mt-4">
                       <li>
                         <a href="#">FAQ</a>
